reviews breaks the page fixed
git-svn-id: https://dev.virtuemart.net/svn/virtuemart/trunk/virtuemart@3450 87cc427b-4a1e-0410-b729-b2260ec0f063

--- a/administrator/components/com_virtuemart/assets/css/admin.styles.css
+++ b/administrator/components/com_virtuemart/assets/css/admin.styles.css
@@ -12,9 +12,9 @@
 #vmPage dl.tabs dt.closed {background: #e8e8e8 url(../images/backgrounds.png) repeat-x;color: #777;border-bottom-color: #CAC9C9;}
 #vmPage dl.tabs dt.closed span {color: #777;}
 
-#vmPage fieldset.adminform {border: solid #CAC9C9 1px;-webkit-border-radius: 6px;
+#vmPage fieldset.adminform, #vmPage fieldset {border: solid #CAC9C9 1px;-webkit-border-radius: 6px;
 -moz-border-radius: 6px;}
-#vmPage fieldset.adminform legend {display: inline-block;padding: 0px 12px;}
+#vmPage fieldset.adminform legend, #vmPage fieldset legend {display: inline-block;padding: 0px 12px;}
 
 
 #cpanel { 
